try to change to bootstrap

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -3,9 +3,9 @@
 "RenameDir":"Rename",
 "DeleteDir":"Delete",
 "AddFile":"Add file",
-"Preview":"Preview",
-"RenameFile":"Rename",
-"DeleteFile":"Delete",
+"Preview":"Preview image",
+"RenameFile":"Rename file",
+"DeleteFile":"Delete file",
 "SelectFile":"Select",
 "OrderBy":"Order by",
 "Name_asc":"&uarr;&nbsp;&nbsp;Name",
